# ray

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Makefile  PLAN_CHUNK_SYSTEM.md  benchmark.sh  meson.build  meson_options.txt  terrain_params.cfg
.claude/commands/: build.md  debug.md  raylib-module.md  raylib.md  run.md
docs/: TERRAIN_TUNING.md  materials.md  physics.md  raylib_cheatsheet_v5.md
include/: attractor_octree.h  audio.h  beaver.h  chunk.h  debug_metrics.h  fixed.h  game.h  input.h  matter.h  noise.h  octree.h  render.h  terrain.h  terrain_tune.h  test.h  tree.h  water.h
resources/shaders/: instancing.fs  instancing.vs
src/: attractor_octree.c  audio.c  beaver.c  chunk.c  chunk_physics.c  chunk_world.c  debug_metrics.c  game.c  input.c  main.c  matter.c  noise.c  octree.c  render.c  terrain.c  terrain_tune.c  test_growth.c  tree.c  water.c
terrain_output/: INDEX.txt
tests/: test_3d_physics.c  test_common.h  test_conservation.c  test_e2e_simulation.c  test_energy_conservation.c  test_flow_behavior.c  test_game.c  test_matter_integration.c  test_matter_system.c  test_matter_unit.c  test_noise.c  test_octree.c  test_phase_specific_cp.c  test_phase_transitions.c  test_physics_predictions.c  test_svo_physics.c  test_svo_unit.c  test_terrain.c  test_tool_integration.c  test_tree.c  test_water_matter_integration.c  test_water_matter_unit.c
